--- a/index.html
+++ b/index.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year Offer</title>
-</head>
-<body>
-    <header>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="banner">
+        <div class="banner-content text-center">
+          <p class="banner-title">Happy New Year</p>
+          <h1 class="banner-description">New Year Party Celebration</h1>
+        </div>
+      </div>
     </header>
     <main>
-
+      <section class="hero">
+        <div class="hero-container">
+          <div class="hero-content">
+            <h1 class="hero-title text-center">65% OFF</h1>
+            <div class="text-center">
+              <h3 class="hero-sub-title">OUR HOLIDAY DEALS ARE BETTER</h3>
+              <h4 class="hero-description">ALL CATEGORIES</h4>
+              <img class="hero-img" src="images/New Year Photo.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="hero-banner-container">
+        <div class="hero-banner">
+          <div class="hero-banner-content">
+            <div>
+              <h1 class="hero-banner-title">Welcome to midnight party</h1>
+              <p class="hero-banner-description">
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+                vel euismod.
+              </p>
+              <p class="hero-text">JOIN NOW</p>
+            </div>
+            <div>
+              <img src="images/Group 70.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="address">
+        <div class="address-content">
+          <p class="address-description"><span class="span">Place:</span> New Park Hotel</p>
+          <p class="address-description"><span class="span">Date:</span> 31 December Night 2023</p>
+          <p class="address-description"><span class="span">Time:</span> Evening 7.30 pm to 12.30 am</p>
+        </div>
+        <div class="text-center">
+            <button class="address-btn">JOIN NOW</button>
+        </div>
+      </section>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
