--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="container header">
       <div class="banner">
         <div class="banner-content text-center">
           <p class="banner-title">Happy New Year</p>
@@ -21,48 +21,53 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="container">
       <section class="hero">
-        <div class="hero-container">
-          <div class="hero-content">
-            <h1 class="hero-title text-center">65% OFF</h1>
-            <div class="text-center">
-              <h3 class="hero-sub-title">OUR HOLIDAY DEALS ARE BETTER</h3>
-              <h4 class="hero-description">ALL CATEGORIES</h4>
-              <img class="hero-img" src="images/New Year Photo.png" alt="" />
-            </div>
+        <h1 class="hero-title text-center">65% OFF</h1>
+        <div class="text-center">
+          <h3 class="hero-sub-title">OUR HOLIDAY DEALS ARE BETTER</h3>
+          <h4 class="hero-description">ALL CATEGORIES</h4>
+          <img class="hero-img" src="images/New Year Photo.png" alt="" />
+        </div>
+      </section>
+
+      <section class="hero-banner">
+        <div class="hero-banner-content">
+          <div>
+            <h1 class="hero-banner-title">Welcome to midnight party</h1>
+            <p class="hero-banner-description">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+            <p class="hero-text">JOIN NOW</p>
+          </div>
+          <div>
+            <img src="images/Group 70.png" alt="" />
           </div>
         </div>
       </section>
-      <section class="hero-banner-container">
-        <div class="hero-banner">
-          <div class="hero-banner-content">
-            <div>
-              <h1 class="hero-banner-title">Welcome to midnight party</h1>
-              <p class="hero-banner-description">
-                Dolor sit amet consectetur. Consequat eget consectetur maecenas
-                sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-                vel euismod.
-              </p>
-              <p class="hero-text">JOIN NOW</p>
-            </div>
-            <div>
-              <img src="images/Group 70.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </section>
+
       <section class="address">
         <div class="address-content">
-          <p class="address-description"><span class="span">Place:</span> New Park Hotel</p>
-          <p class="address-description"><span class="span">Date:</span> 31 December Night 2023</p>
-          <p class="address-description"><span class="span">Time:</span> Evening 7.30 pm to 12.30 am</p>
+          <p class="address-description">
+            <span class="span">Place:</span> New Park Hotel
+          </p>
+          <p class="address-description">
+            <span class="span">Date:</span> 31 December Night 2023
+          </p>
+          <p class="address-description">
+            <span class="span">Time:</span> Evening 7.30 pm to 12.30 am
+          </p>
         </div>
         <div class="text-center">
-            <button class="address-btn">JOIN NOW</button>
+          <button class="address-btn">JOIN NOW</button>
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="container">
+      <h1>footer baki ache</h1>
+    </footer>
   </body>
 </html>
