styles for holiday section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
               vel euismod.
             </p>
-            <p class="hero-text">JOIN NOW</p>
+            <p class="hero-banner-btn">JOIN NOW</p>
           </div>
           <div>
             <img src="images/Group 70.png" alt="" />
@@ -62,6 +62,25 @@
         </div>
         <div class="text-center">
           <button class="address-btn">JOIN NOW</button>
+        </div>
+      </section>
+
+      <!-- holiday sales section start here -->
+      <section class="holiday-section-container">
+        <div class="holiday-text-container">
+          <h5>WHAT IS FUNCTIONAL</h5>
+          <h1><span class="holiday">Holidays</span> Sale 50%</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. Eleifend nunc purus quam id fermentum amet amet sit
+            consectetur.
+          </p>
+        </div>
+        <div class="solid-color"></div>
+        <div class="giftbox">
+          <img src="./images/giftbox.png" alt="">
+          <img src="./images/discount.png" alt="">
         </div>
       </section>
     </main>
