--- a/index.html
+++ b/index.html
@@ -79,8 +79,39 @@
         </div>
         <div class="solid-color"></div>
         <div class="giftbox">
-          <img src="./images/giftbox.png" alt="">
-          <img src="./images/discount.png" alt="">
+          <img src="./images/giftbox.png" alt="" />
+          <img src="./images/discount.png" alt="" />
+        </div>
+      </section>
+
+      <section class="portfolio-container">
+        <h5>THE BEST GIFTS</h5>
+        <h2>Our Awesome Portfolio</h2>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. <br />
+          Ipsum sed sodales risus ut pellentesque vel euismod.
+        </p>
+
+        <div class="portfolio-items">
+          <div class="item">
+            <img src="./images/bag.png" alt="">
+          </div>
+          <div class="item">
+            <img src="./images/purse.png" alt="">
+          </div>
+          <div class="item">
+            <img src="./images/shoe1.png" alt="">
+          </div>
+          <div class="item">
+            <img src="./images/shoe2.png" alt="">
+          </div>
+          <div class="item">
+            <img src="./images/sunglass.png" alt="">
+          </div>
+          <div class="item">
+            <img src="./images/ring.png" alt="">
+          </div>
         </div>
       </section>
     </main>
