--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
       </div>
     </header>
+
     <main class="container">
       <section class="hero">
         <h1 class="hero-title text-center">65% OFF</h1>
@@ -95,29 +96,61 @@
 
         <div class="portfolio-items">
           <div class="item">
-            <img src="./images/bag.png" alt="">
+            <img src="./images/bag.png" alt="" />
           </div>
           <div class="item">
-            <img src="./images/purse.png" alt="">
+            <img src="./images/purse.png" alt="" />
           </div>
           <div class="item">
-            <img src="./images/shoe1.png" alt="">
+            <img src="./images/shoe1.png" alt="" />
           </div>
           <div class="item">
-            <img src="./images/shoe2.png" alt="">
+            <img src="./images/shoe2.png" alt="" />
           </div>
           <div class="item">
-            <img src="./images/sunglass.png" alt="">
+            <img src="./images/sunglass.png" alt="" />
           </div>
           <div class="item">
-            <img src="./images/ring.png" alt="">
+            <img src="./images/ring.png" alt="" />
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="container">
-      <h1>footer baki ache</h1>
+    <footer class="container footer-container">
+      <div class="footer-first-section">
+        <div>
+          <p>
+            44, Big Building Roosevelt Street <br />
+            Beach Gardens Florida 33410
+          </p>
+        </div>
+        <div>
+          <span class="contact">
+            <img src="./icons/Call.png" alt="" />
+            <p>+00 123 584 124</p>
+          </span>
+          <span class="contact">
+            <img src="./icons/Website.png" alt="" />
+            <p>www.website.com</p>
+          </span>
+        </div>
+      </div>
+      <hr class="hr">
+
+      <div class="social-icons">
+        <img src="./icons/Facebook.png" alt="">
+        <img src="./icons/Instagram.png" alt="">
+        <img src="./icons/Twitter.png" alt="">
+        <img src="./icons/Linkedin.png" alt="">
+      </div>
+      <hr class="hr">
+
+      <div class="footer-end-text">
+        <p>2017, All Rights Reserved.</p>
+        <p>Unsubscribe</p>
+      </div>
+
     </footer>
   </body>
 </html>
