offer-section done

--- a/index.html
+++ b/index.html
@@ -66,6 +66,29 @@
         </div>
       </section>
 
+      <!-- best offer section start -->
+      <div class="offer-container">
+        <div class="offer-first-side">
+          <h5>NEW BEST OFFER</h5>
+          <h1>Coming Soon</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="offer-middle-side">
+          <img src="./images/offer-img.png" alt="" />
+        </div>
+        <div class="offer-last-side">
+          <h4>2024</h4>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+          </p>
+          <img src="./images/happy-new-year.png" alt="" />
+        </div>
+      </div>
+
       <!-- holiday sales section start here -->
       <section class="holiday-section-container">
         <div class="holiday-text-container">
@@ -136,21 +159,19 @@
           </span>
         </div>
       </div>
-      <hr class="hr">
-
+      <hr class="hr" />
       <div class="social-icons">
-        <img src="./icons/Facebook.png" alt="">
-        <img src="./icons/Instagram.png" alt="">
-        <img src="./icons/Twitter.png" alt="">
-        <img src="./icons/Linkedin.png" alt="">
+        <img src="./icons/Facebook.png" alt="" />
+        <img src="./icons/Instagram.png" alt="" />
+        <img src="./icons/Twitter.png" alt="" />
+        <img src="./icons/Linkedin.png" alt="" />
       </div>
-      <hr class="hr">
+      <hr class="hr" />
 
       <div class="footer-end-text">
         <p>2017, All Rights Reserved.</p>
         <p>Unsubscribe</p>
       </div>
-
     </footer>
   </body>
 </html>
