offer section and subscribe section done

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         </div>
       </section>
 
+      <!-- portfolio section starts here -->
       <section class="portfolio-container">
         <h5>THE BEST GIFTS</h5>
         <h2>Our Awesome Portfolio</h2>
@@ -138,6 +139,27 @@
           </div>
         </div>
       </section>
+
+      <!-- subscribe section starts here -->
+      <div class="subscribe-container">
+        <div class="subscribe-letter">
+          <img src="./images/letter.png" alt="" />
+          <h2>Subscribe Newsletter</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="subscribe-btn">
+          <div>
+            <p>user@gmail.com</p>
+          </div>
+          <div>
+            <button class="button">Subscribe</button>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="container footer-container">
